Hover scene card alignment fix, and styling file formatting

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,22 @@
 @import "./scss";
 
+:root {
+  --#{$prefix}-director-link-color: #{$stash-link-color};
+  --#{$prefix}-font-sm: #{toRem(12)};
+  --#{$prefix}-performer-link-color: #{$stash-link-color};
+  --#{$prefix}-resolution-icon-bg-color: #{$stash-body-color};
+  --#{$prefix}-resolution-icon-color: #{$stash-card-bg};
+  --#{$prefix}-top-line-opacity: #{0.8};
+
+  --#{$prefix}-gender-color--female: #{$stash-gender-female};
+  --#{$prefix}-gender-color--intersex: #{$stash-gender-intersex};
+  --#{$prefix}-gender-color--male: #{$stash-gender-male};
+  --#{$prefix}-gender-color--nonbinary: #{$stash-gender-nonbinary};
+  --#{$prefix}-gender-color--transfemale: #{$stash-gender-transfemale};
+  --#{$prefix}-gender-color--transmale: #{$stash-gender-transmale};
+  --#{$prefix}-gender-color--unknown: #{$stash-gender-unknown};
+}
+
 .valkyr-scene-card {
   display: flex;
 
@@ -30,21 +47,9 @@
   height: 100%;
 }
 
-:root {
-  --#{$prefix}-director-link-color: #{$stash-link-color};
-  --#{$prefix}-font-sm: #{toRem(12)};
-  --#{$prefix}-performer-link-color: #{$stash-link-color};
-  --#{$prefix}-resolution-icon-bg-color: #{$stash-body-color};
-  --#{$prefix}-resolution-icon-color: #{$stash-card-bg};
-  --#{$prefix}-top-line-opacity: #{0.8};
-
-  --#{$prefix}-gender-color--female: #{$stash-gender-female};
-  --#{$prefix}-gender-color--intersex: #{$stash-gender-intersex};
-  --#{$prefix}-gender-color--male: #{$stash-gender-male};
-  --#{$prefix}-gender-color--nonbinary: #{$stash-gender-nonbinary};
-  --#{$prefix}-gender-color--transfemale: #{$stash-gender-transfemale};
-  --#{$prefix}-gender-color--transmale: #{$stash-gender-transmale};
-  --#{$prefix}-gender-color--unknown: #{$stash-gender-unknown};
+// Fix hover popover content being center aligned
+.hover-popover-content .valkyr-scene-card {
+  text-align: initial;
 }
 
 .vsc-gender-color--female {
